--- a/Intro/c07_Gliederung.tex
+++ b/Intro/c07_Gliederung.tex
@@ -16,7 +16,7 @@
   \index{Part}
   
   Es gibt zwei Möglichkeiten Gliederungen zu definieren.
-  ConTeXt versteht die LaTeX-Befehle \type{\chapter{}}, \type{\section{}} usw.
+  ConTeXt versteht die LaTeX-Befehle \tex{chapter{}}, \tex{section{}} usw.
   
   Für einige Funktionen (tagged-PDF, ePUB Export und XML Export) muss die Gliederung als Umgebung definiert werden.
   
@@ -74,7 +74,7 @@ Ein Dokument hat dann z.\,B. folgenden Aufbau:
 
         Dies ist der Test für einen \type{subsubsubsection}. 
         Ab dieser Ebene werden die Abschnitte nicht mehr nummeriert.
-        Das läßt sich jedoch leicht mit dem Befehl \type{\setuphead[subsubsubsection][number=yes]} ändern.
+        Das läßt sich jedoch leicht mit dem Befehl \tex{setuphead[subsubsubsection][number=yes]} ändern.
         Die entsprechenden Einstellungen finden sich in der Environment-Datei.
 
 
