--- a/Intro/c11_Aufzählung.tex
+++ b/Intro/c11_Aufzählung.tex
@@ -194,7 +194,7 @@ wird der Zeilenabstand unterdrückt.
 \stopitemize
 
 Das geht auch zeilenweise, allerdings müssen die Einträge dann in 
-\type{\startitem} \type{\stopitem} Befehle eingeschlossen werden.
+\tex{startitem} \tex{stopitem} Befehle eingeschlossen werden.
 
 \starttyping
 \startitemize[n,horizontal,three]
