--- a/Intro/c16_Hervorhebungen.tex
+++ b/Intro/c16_Hervorhebungen.tex
@@ -16,7 +16,7 @@
 Es gibt mehrere Möglichkeiten Textblöcke hervorzuheben.
 So kann man sie z.\,B. mit einem breiteren Rand setzen.
 
-Mit dem Befehl \type{\startnarrower} wird der Rand standardmäßig auf beiden Seiten um \unit{5 mm} verbreitert,
+Mit dem Befehl \tex{startnarrower} wird der Rand standardmäßig auf beiden Seiten um \unit{5 mm} verbreitert,
 der Textblock wird somit \unit{1 cm} schmaler.
 
 \startnarrower
@@ -37,7 +37,7 @@ Die Breite lässt sich für beide Ränder getrennt einstellen:
 \stopnarrower
 
 Oder für beide Seiten gleich.
-Die Option \type{[middle]} muss beim \type{\startnarrower}-Befehl nicht angegeben werden,
+Die Option \type{[middle]} muss beim \tex{startnarrower}-Befehl nicht angegeben werden,
 da es die Standardeinstellung ist.\index{narrower}
 
 \starttyping
