--- a/Intro/c17_Textgrößen.tex
+++ b/Intro/c17_Textgrößen.tex
@@ -17,29 +17,29 @@ Als nächstes sollen verschiedene Textgrößen ausprobiert werden.
 
 \startitemize
 \item
-  \type{\tfxx} {\tfxx Zwei Stufen verkleinert}
+  \tex{tfxx} {\tfxx Zwei Stufen verkleinert}
 \item
-  \type{\tfx} {\tfx Eine Stufe verkleinert}
+  \tex{tfx} {\tfx Eine Stufe verkleinert}
 \item
-  \type{\tf} normale Größe
+  \tex{tf} normale Größe
 \item
-  \type{\tfa} {\tfa Eine Stufe vergrößert}
+  \tex{tfa} {\tfa Eine Stufe vergrößert}
 \item
-  \type{\tfb} {\tfb Zwei Stufe vergrößert}
+  \tex{tfb} {\tfb Zwei Stufe vergrößert}
 \item
-  \type{\tfc} {\tfc Drei Stufe vergrößert}
+  \tex{tfc} {\tfc Drei Stufe vergrößert}
 \item
-  \type{\tfd} {\tfd Vier Stufe vergrößert}
+  \tex{tfd} {\tfd Vier Stufe vergrößert}
 \item
-  \type{\bfa} {\bfa Eine Stufe vergrößert und fett}
+  \tex{bfa} {\bfa Eine Stufe vergrößert und fett}
 \item
-  \type{\ita} {\ita Eine Stufe vergrößert und kursiv}
+  \tex{ita} {\ita Eine Stufe vergrößert und kursiv}
 \item
-  \type{\ssa} {\ssa Eine Stufe vergrößert und Sans Serif}
+  \tex{ssa} {\ssa Eine Stufe vergrößert und Sans Serif}
 \stopitemize
 
 Schriftgrößen gelten alle blockweise, also bitte {\em nicht} so etwas
-wie \type{\tfa{Gross und klein}} schreiben, weil
+wie \tex{tfa{Gross und klein}} schreiben, weil
 das Ergebnis so etwas ist: {\tfa Gross und klein.}
 
 \stopsection
