--- a/Intro/c25_Links.tex
+++ b/Intro/c25_Links.tex
@@ -36,12 +36,12 @@ das Argument in der eckigen Klammer ist der eigentliche Link.
    
 \goto{ConTeXt garden}[url(https://wiki.contextgarden.net/)]
 
-Alternativ kann man die URLs mit dem \type{\useURL} Befehl definieren und dann mit dem \type{\from} Befehl nutzen.
+Alternativ kann man die URLs mit dem \tex{useURL} Befehl definieren und dann mit dem \tex{from} Befehl nutzen.
 Das ist dann sinnvoll, wenn eine URL mehrfach benötigt.
 Außerdem lassen sich so alle URLs an einer Stelle (z.\,B in einer Environmentdatei) speichern.
 Somit hat man nur eine Stelle die aktualisiert werden muss.
 
-Will man eine URL in einer Bildunterschrift (z.\,B. im \type{\placefigure} Befehl) nutzen, dann muss diese Form benutzt werden.
+Will man eine URL in einer Bildunterschrift (z.\,B. im \tex{placefigure} Befehl) nutzen, dann muss diese Form benutzt werden.
 (Siehe \in{Kapitel}[Grafiken])
 
 \starttyping
