--- a/Intro/c33_Chemie.tex
+++ b/Intro/c33_Chemie.tex
@@ -13,7 +13,7 @@
   title={Chemie},
   ]
 \index{Chemie}
-Zur Eingabe chemischer Formeln benutzt man den \type{\chemical} Befehl.
+Zur Eingabe chemischer Formeln benutzt man den \tex{chemical} Befehl.
 Leider ist dieser Bereich schlecht dokumentiert.
 
 \starttyping
@@ -29,9 +29,9 @@ Leider ist dieser Bereich schlecht dokumentiert.
 
 %Das kann man auch als Textformel darstellen: \chemical{2 H_2,PLUS,O_2,GIVES,2 H_2O}.
 
-Außerhalb der \type{startchemical} Umgebung funktioniert der \type{\chemical} Befehl nicht,
+Außerhalb der \type{startchemical} Umgebung funktioniert der \tex{chemical} Befehl nicht,
 wenn PDF/A erzeugt werden soll.
-Der \type{\molecule} Befehl liefert aber die einzelnen Moleküle auch im Text: 
+Der \tex{molecule} Befehl liefert aber die einzelnen Moleküle auch im Text: 
 \molecule{2 H_2} + \molecule{O_2} \rightarrow \molecule{2 H_2O}.
 
 \starttyping
