--- a/Intro/c40_PDFA.tex
+++ b/Intro/c40_PDFA.tex
@@ -20,7 +20,7 @@ Dieser für Archivierung vorgesehene Standard wir von vielen Organisationen gefo
 und kann mit LaTeX nur bedingt erreicht werden.
 
 ConTeXt bietet die Möglichkeit tagged PDF zu erstellen und erreich somit PDF/A-1b.
-Im Dokument muss dazu die \type{\start...}/\type{\stop...} Version für Umgebungen verwendet werden.
+Im Dokument muss dazu die \tex{start...}/\tex{stop...} Version für Umgebungen verwendet werden.
 
 Außerdem sind folgende Einstellungen erforderlich:
 
@@ -58,7 +58,7 @@ Das \type{ISOcoated} Profil wird mit ConTeXt mitgeliefert.
 
 \startsubsection[title={Probleme}]
 
-Der \type{\chemical} Befehl funktioniert nicht im Text.
+Der \tex{chemical} Befehl funktioniert nicht im Text.
 
 \stopsubsection
 
