--- a/Intro/c45_Trennungen.tex
+++ b/Intro/c45_Trennungen.tex
@@ -25,7 +25,7 @@ forcieren bzw. zu empfehlen.
   bei mir trennt TeX fehlerhaft mit „Tren-nalgorithmus“.)
 \item
   Dies ist ein etwas längerer Text, der das Wort „Trenn\-algorithmus“
-  trennen soll. Hier wurde die Trennung mit \type{\-} forciert.
+  trennen soll. Hier wurde die Trennung mit \tex{-} forciert.
 \item
   Hier etwas  Fülltext als zuvor, der das Wort „Floss/Libre“ trennen
   soll. Es ragt über den Rand.
@@ -35,7 +35,7 @@ Der oben beschrieben Fehler tritt mit den aktuellen Trennmustern nicht mehr auf.
 
 Bei schmalen Spalten oder langen nichttrennbaren Wörter kann es trotzdem zu übervollen Zeilen kommen.
 Hier sollte man ConTeXt etwas mehr Leerraum gönnen.
-Der Befehl \type{\setupalign} hilft hier weiter:
+Der Befehl \tex{setupalign} hilft hier weiter:
 
 \starttyping
 \setupalign[hyphenated,morehyphenation,flushleft]
@@ -61,7 +61,7 @@ Die möglichen Optionen sind:
 \stoptabulate
 
 Man kann die Einstellung auch nur für bestimmte Absätze ändern, 
-z.\,B. wenn viele Wörter mit \type{\type} gesätzt werden.
+z.\,B. wenn viele Wörter mit \tex{type} gesätzt werden.
 
 \starttyping
 \startalignment[verytolerant]
