--- a/Intro/c51_Verzeichnisse.tex
+++ b/Intro/c51_Verzeichnisse.tex
@@ -17,8 +17,8 @@
 
 \startsubsection[title={Inhaltsverzeichnis}]
 
-Das Inhaltsverzeichnis wird entweder mit \type{\completecontent[criterium=all]}
-oder mit \type{\placecontent[criterium=all]} erstellt. 
+Das Inhaltsverzeichnis wird entweder mit \tex{completecontent[criterium=all]}
+oder mit \tex{placecontent[criterium=all]} erstellt. 
 Im ersten Fall gibt es ein Kapitel ohne Nummer, 
 das auch nicht im Inhaltsverzeichnis erscheint, im zweiten nicht.
 
@@ -115,8 +115,8 @@ Die Definition zeigt nur einige der Optionen.
           n=1,          %% columns
 ]
 
-Jetzt steht der Befehl \type{\myregister}\myregister{Myregister} zur Verfügung.
-Das Verzeichnis wird mit \type{\placemyregister} ausgegebn.
+Jetzt steht der Befehl \tex{myregister}\myregister{Myregister} zur Verfügung.
+Das Verzeichnis wird mit \tex{placemyregister} ausgegebn.
 
 \placemyregister
 
