--- a/Intro/c41_Zitate.tex
+++ b/Intro/c41_Zitate.tex
@@ -29,18 +29,18 @@ Es muss noch etwas länger werden, damit man die Ränder besser sieht.
 \stopblockquote
 
 
-Für kurze Zitate, die innerhalb eines Absatzes gibt es den \type{\quotation} Befehl. 
+Für kurze Zitate, die innerhalb eines Absatzes gibt es den \tex{quotation} Befehl. 
 Damit kann man wörtliche Rede \quotation{So wie diese hier.} wiedergeben.
 Die Anführungsstriche werden richtig gesetzt. "Hier zum Unterschied falsche Anführungszeichen."
 
-Innerhalb der \type{\quotation} kann man mit dem \type{\quote} Befehl eine weitere Ebene schachteln.
+Innerhalb der \tex{quotation} kann man mit dem \tex{quote} Befehl eine weitere Ebene schachteln.
 \quotation{Äußere Rede \quote{Innerer Monolog} und hier wieder außen.}
 
 Die Anführungszeichen werden abhängig von der Sprache angepasst.
 
 {\language[fr]
 In Französisch sieht das dann so aus:
-Innerhalb der \type{\quotation} kann man mit dem \type{\quote} Befehl eine weitere Ebene schachteln.
+Innerhalb der \tex{quotation} kann man mit dem \tex{quote} Befehl eine weitere Ebene schachteln.
 \quotation{Äußere Rede \quote{Innerer Monolog} und hier wieder außen.}
 }
 
